micro-java/target/hello/WEB-INF/classes/META-INF/fabric8/openshift/hello-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: d926a92454a24acfda4a012f93bde07afdd0f48a
    fabric8.io/git-branch: micro-config
    fabric8.io/git-url: https://github.com/anitakwy/DO288-apps
  labels:
    app: hello
    provider: fabric8
    version: "1.0"
    group: com.redhat.training.openshift
  name: hello
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: hello
    provider: fabric8
    group: com.redhat.training.openshift
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: d926a92454a24acfda4a012f93bde07afdd0f48a
        fabric8.io/git-branch: micro-config
        fabric8.io/git-url: https://github.com/anitakwy/DO288-apps
      labels:
        app: hello
        provider: fabric8
        version: "1.0"
        group: com.redhat.training.openshift
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: hello:1.0
        imagePullPolicy: IfNotPresent
        name: thorntail-v2
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - thorntail-v2
      from:
        kind: ImageStreamTag
        name: hello:1.0
    type: ImageChange
