micro-java/target/hello/WEB-INF/classes/META-INF/fabric8/openshift/hello-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: d926a92454a24acfda4a012f93bde07afdd0f48a
    fabric8.io/git-branch: micro-config
    fabric8.io/git-url: https://github.com/anitakwy/DO288-apps
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: hello
    provider: fabric8
    version: "1.0"
    group: com.redhat.training.openshift
  name: hello
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
    provider: fabric8
    group: com.redhat.training.openshift
